tests/toy/neg/000876_mutation.toylang
program a = { a then sleep; } .
